# ppsn

./: .editorconfig  .gitignore  .gitmodules  Coding.md  PPSn.sln  PPSnCore.sln  PPSnExcel.sln  PPSnMod.sln  PPSnWpf.sln  Styleguide.md  readme.md
Common/: AssemblyInfo.targets
PPSnClient/: NativeMethods.Credential.cs  NativeMethods.cs  PPSnClient.csproj  PPSnClient.projitems  PPSnClient.shproj  PpsEnvironmentInfo.cs  Shell.Lua.cs  Shell.cs  Threading.cs  packages.config
PPSnCore/: AssemblyInfo.cs  PPSnCore.csproj  TecWare.PPSn.Core.nuspec  Xml.cs  packages.config
PPSnCoreCfg/: Contacts.xml  Contract.xml  Offer.xml  PPSn.Test.xml  PPSn.all.xml  PPSn.template  PPSnCoreCfg.csproj  System.xml  Tests.lua
PPSnCoreTest/: FilterTests.cs  PPSnCoreTest.csproj  Stuff.cs  packages.config
PPSnDesktop/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  PPSnDesktop.csproj  PpsEnvironment.Data.cs  PpsEnvironment.Exceptions.cs  PpsEnvironment.Http.cs  PpsEnvironment.Lua.cs  PpsEnvironment.Objects.cs  PpsEnvironment.UI.cs  PpsEnvironment.Views.cs  PpsEnvironment.cs  PpsMainEnvironment.Data.cs  PpsMainEnvironment.Documents.cs  PpsMainEnvironment.Objects.cs  PpsMainEnvironment.Views.cs  PpsMainEnvironment.cs  Readme.md  TecWare.PPSn.Desktop.nuspec  app.manifest  packages.config
PPSnDesktopMSI/: Components.wxs  PPSnDesktopMSI.wixproj  Product.wxs
PPSnDesktopMsiExtension/: CustomAction.cs  PPSnDesktopMsiExtension.csproj
PPSnDesktopPG/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  (+1 more)
PPSnDesktopUI/x64/: args.gn
(+734 files in other folders)
